--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation
@@ -80,8 +75,8 @@
       <div class="col-xs-12 col-md-6"> <img src="../img/About.JPG" class="img-responsive" alt=""> </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
+          <p>For 10 years after graduating from Indiana University, I worked tirelessly to become successful in the fitness industry. Although I enjoyed working directly with my clients on improving their lives, I couldn't shake the feeling that I wasn't completely fulfilled. Searching for self-actualization led me to Eleven Fifty Acadamy, where I hope to hone my skills as a program developer. </p>
+          <p>I love the creative aspects of computer coding, and I thrive in environments where strong problem-solving skills are needed.</p>
           <a href="#portfolio" class="btn btn-default btn-lg page-scroll">My Portfolio</a> </div>
       </div>
     </div>
@@ -327,6 +322,8 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Thanks for stopping by!</p>
+      <p>© JHalverson</p>
+      <p>Eleven Fifty Acadamy .Net 2019</p>
     </div>
   </div>
 </div>
